# Screen32

./: .gitignore  .gitmodules  0.md  1.md  AGENT.md  OfflineDemoController.md  README.md  Scr.md  build_web.sh  extra_script.py  lvgl.h  platformio.ini  tmp_serve_out.txt
boards/: JC8048W550C.json
demo_web/: CMakeLists.txt  frontend_config.json  lv_conf.h  shell.html  simple_demo.html
docs/: memory.md
include/: lv_conf.h
lib/esp32-smartdisplay/src/: lvgl_panel_st7262_par.c
lvgl/: lvgl.h
scripts/: build_web.bat  env_web.bat  generate_ui_meta.py  serve_web.bat
src/: lvgl_font_montserrat_26_force.c  main.cpp
src/common_app/: FrontApp.cpp  FrontApp.h  KeyboardController.cpp  KeyboardController.h  app_core.cpp  app_core.h  boot_controller.cpp  boot_controller.h  frontend_config.cpp  frontend_config.h  frontend_platform.h  frontend_runtime.cpp  frontend_runtime.h  frontend_service_responder.cpp  frontend_service_responder.h  frontend_ui_events.cpp  frontend_ui_events.h  keyboard_action_stubs.cpp  navigation.cpp  navigation.h  offline_demo_controller.cpp  offline_demo_controller.h  page_state_builder.cpp  page_state_builder.h  shared_app.cpp  shared_app.h
src/demo/: README.md  offline_demo_controller.cpp  offline_demo_controller.h  offline_demo_scenario.cpp  offline_demo_scenario.h  offline_demo_ui_events.cpp  offline_demo_ui_events.h
src/platform_esp32/: platform.cpp  platform.h
src/platform_web/: platform.cpp  platform.h  web_main.cpp
src/screenlib/link/: UartClientLink.cpp  UartClientLink.h  WebSocketClientLink.cpp  WebSocketClientLink.h
src/screenlib/runtime/: ScreenClient.cpp  ScreenClient.h
src/ui/: actions.h  fonts.h  screens.c  screens.h  styles.c  styles.h  ui_font_m_18.c  ui_font_m_20.c  ui_font_m_24.c  ui_font_m_70.c  vars.h
tools/ui_meta_gen/: README.md  generate_ui_meta.py
